--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-montserrat: var(--font-montserrat);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,10 +18,161 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
+
+  
 }
 
+
+
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background-color: #131c2f;
+  color: #eee;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url('../../public/images/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+ .title {
+  font-size: 40px;
+  margin-top: 30px;
+  
+  font-weight: 700;
+  
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.container {
+  height: 100vh;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 24px;
+}
+
+nav {
+  height: 150px;
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+
+nav a {
+  transition: all 0.3s ease;
+}
+
+nav a:hover {
+  color: #fff;
+  scale: 1.05;
+}
+
+button {
+  background-color: #1e40af; /* Deep blue */
+  color: #fff;
+  font-size: 1.1rem;
+  padding: 0.6rem 1.4rem;
+  border: 2px solid #3b82f6; /* Blue border */
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+  background-color: #2563eb; /* Lighter blue on hover */
+  
+  border-color: #3b82f6; /* Lighter border */
+}
+
+.content {
+  font-weight: 300;
+}
+
+.content h1 {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.notPremium h1 {
+  width: 500px;
+}
+
+.notPremium a {
+  border-bottom: 1px solid #eee;
+  padding: 2px 0px;
+  font-size: 20px;
+  transition: all 0.2s ease;
+}
+
+.notPremium a:hover {
+  font-weight: 400;
+}
+
+ul {
+  list-style: inside;
+}
+
+li {
+  font-size: 20px;
+  margin-bottom: 5px;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+li:hover {
+  scale: 1.02;
+}
+
+.profile p {
+  margin-bottom: 20px;
+}
+
+.profile form {
+  margin: 20px 0px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+input {
+  padding: 5px 10px;
+  border-radius: 3px;
+  color: black;
+  font-size: 20px;
+}
+
+b {
+  font-weight: bold;
+}
+
+.login form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.login p {
+  color: coral;
+  font-size: 18px;
+}
+
+input {
+ 
+  background-color: white;
 }
